Adding the tests for actions on Created VM

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -17,8 +17,14 @@
     "get_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes/%s",
     "delete_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes/%s",
     "create_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines",
+    "update_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
     "delete_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
     "get_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
+    "restart_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=restart",
+    "stop_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=stop",
+    "start_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=start",
+    "pause_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=pause",
+    "unpause_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=unpause",
     "list_vm_instances": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances",
     "get_vm_instance": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s",
     "create_network": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
