Add test cases for VM scheduling behavior
1) test VM schedule only on the nodes that satisfied the CPU requirement
2) test VM schedule only on the nodes that satisfied the memory requirement
3) test VM schedule only on the nodes that satisfied both CPU and memory
   requirements

In addition, this patch also added test cases for

1) create an image with the same name after the previous image had been
   deleted
2) image creation failed with a bogus URL

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -5,6 +5,7 @@
     "get_vlan": "{{ harvester_endpoint }}/apis/network.harvesterhci.io/v1beta1/namespaces/harvester-system/clusternetworks/vlan",
     "update_vlan": "{{ harvester_endpoint }}/v1/network.harvesterhci.io.clusternetworks/harvester-system/vlan",
     "list_nodes": "{{ harvester_endpoint }}/v1/nodes",
+    "get_node_metrics": "{{ harvester_endpoint }}/v1/metrics.k8s.io.nodes/%s",
     "first_login_check": "{{ harvester_endpoint }}/v3/settings/first-login",
     "local_auth": "{{ harvester_endpoint }}/v3-public/localProviders/local",
     "reset_password": "{{ harvester_endpoint }}/v3/users",
