--- a/harvester_e2e_tests/templates/basic_image.json.j2
+++ b/harvester_e2e_tests/templates/basic_image.json.j2
@@ -1,6 +1,6 @@
 {# Template for basic image creation request. #}
 
-{% if name is not defined %}
+{% if name is not defined or name is none %}
     {% set name = random_name() %}
 {% endif %}
 
