--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -6,6 +6,7 @@
     "update_vlan": "{{ harvester_endpoint }}/v1/network.harvesterhci.io.clusternetworks/harvester-system/vlan",
     "list_nodes": "{{ harvester_endpoint }}/v1/nodes",
     "get_node": "{{ harvester_endpoint }}/v1/nodes/%s",
+    "delete_node": "{{ harvester_endpoint }}/v1/nodes/%s",
     "get_node_metrics": "{{ harvester_endpoint }}/v1/metrics.k8s.io.nodes/%s",
     "first_login_check": "{{ harvester_endpoint }}/v3/settings/first-login",
     "local_auth": "{{ harvester_endpoint }}/v3-public/localProviders/local",
