--- a/harvester_e2e_tests/templates/basic_volume.json.j2
+++ b/harvester_e2e_tests/templates/basic_volume.json.j2
@@ -11,6 +11,7 @@
         "annotations": {
             "field.cattle.io/description": "{{ description | default('') }}"
         },
+        "labels": {},
         "name": "{{ name }}",
         "namespace": "{{ volume_namespace | default('default') }}"
     },
