VM P2 machine type testcases

--- a/harvester_e2e_tests/templates/basic_vm.json.j2
+++ b/harvester_e2e_tests/templates/basic_vm.json.j2
@@ -127,7 +127,7 @@
                         ]
                     },
                     "machine": {
-                        "type": ""
+                        "type": "{{ machine_type | default('q35') }}"
                     },
                     "resources": {
                         "requests": {
