Fix tests to sync up with the latest PVC and other API changes
The latest Harvester release has significant API changes. This
patch fixes the broken tests to sync up with the latest API changes.

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -3,7 +3,7 @@
 
 {
     "get_vlan": "{{ harvester_endpoint }}/apis/network.harvesterhci.io/v1beta1/clusternetworks/vlan",
-    "update_vlan": "{{ harvester_endpoint }}/v1/network.harvesterhci.io.clusternetworks/harvester-system/vlan",
+    "update_vlan": "{{ harvester_endpoint }}/v1/harvester/network.harvesterhci.io.clusternetworks/vlan",
     "list_nodes": "{{ harvester_endpoint }}/v1/nodes",
     "get_node": "{{ harvester_endpoint }}/v1/nodes/%s",
     "delete_node": "{{ harvester_endpoint }}/v1/nodes/%s",
@@ -19,20 +19,20 @@
     "delete_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
     "get_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
     "update_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
-    "create_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes",
-    "update_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes/%s",
-    "get_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes/%s",
-    "delete_volume": "{{ harvester_endpoint }}/apis/{{ cdi_api_version }}/namespaces/{{ api_namespace | default('default') }}/datavolumes/%s",
+    "create_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims",
+    "update_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims/%s",
+    "get_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims/%s",
+    "delete_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims/%s",
     "create_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines",
     "update_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
     "delete_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
     "get_vm": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s",
-    "restart_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=restart",
-    "stop_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=stop",
-    "start_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=start",
-    "pause_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=pause",
-    "unpause_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=unpause",
-    "migrate_vm": "{{ harvester_endpoint }}/v1/kubevirt.io.virtualmachines/{{ api_namespace | default('default') }}/%s?action=migrate",
+    "restart_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s/restart",
+    "stop_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s/stop",
+    "start_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s/start",
+    "pause_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s/pause",
+    "unpause_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s/unpause",
+    "migrate_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s/migrate",
     "list_vm_instances": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances",
     "get_vm_instance": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s",
     "create_network": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
@@ -41,10 +41,10 @@
     "list_harvester_settings": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings",
     "get_api_ui_version": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/api-ui-version",
     "create_user": "{{ harvester_endpoint }}/v1/harvesterhci.io.users",
-    "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates",
-    "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates",
-    "delete_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplates/%s",
-    "create_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions",
-    "list_vm_template_versions": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions",
-    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinetemplateversions/%s"
+    "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
+    "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
+    "delete_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates/%s",
+    "create_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
+    "list_vm_template_versions": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions",
+    "delete_vm_template_version": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplateversions/%s"
 }
