Fix test breakages
Fix test breakages relating to:

1) API changes for the images where "sourceType" is required.
2) timing delaying for the volume state change when their owning
   VM is deleted
3) implement enable/disable maintenance as they are not longer part
   of action links

--- a/harvester_e2e_tests/templates/basic_image.json.j2
+++ b/harvester_e2e_tests/templates/basic_image.json.j2
@@ -16,6 +16,7 @@
     },
     "spec": {
         "displayName": "{{ name }}",
+        "sourceType": "{{ source_type | default('download') }}",
         "url": "{{ url }}"
     }
 }
