--- a/harvester_e2e_tests/templates/basic_vm.json.j2
+++ b/harvester_e2e_tests/templates/basic_vm.json.j2
@@ -1,6 +1,10 @@
 {# Template for basic VM creation request. Start the VM instance upon #}
 {# creation. #}
 
+{% if include_usb is not defined %}
+    {% set include_usb = True %}
+{% endif %}
+
 {% if name is not defined %}
     {% set name = random_name() %}
 {% endif %}
@@ -59,6 +63,7 @@
 {% endif %}
                             }
                         ],
+{% if include_usb %}
                         "inputs": [
                             {
                                 "bus": "usb",
@@ -66,6 +71,7 @@
                                 "type": "tablet"
                             }
                         ],
+{% endif %}
                         "interfaces": [
                             {
                                 "masquerade": {},
