Adding backupRestore tests

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -33,6 +33,11 @@
     "pause_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s/pause",
     "unpause_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s/unpause",
     "migrate_vm": "{{ harvester_endpoint }}/apis/subresources.kubevirt.io/v1/namespaces/{{ api_namespace | default('default') }}/virtualmachines/%s/migrate",
+    "create_vm_backup": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinebackups",
+    "get_vm_backup": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinebackups/%s",
+    "create_vm_restore": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinerestores",
+    "get_vm_restore": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinerestores/%s",
+    "delete_vm_backup": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachinebackups/%s",
     "list_vm_instances": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances",
     "get_vm_instance": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s",
     "create_network": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
@@ -41,6 +46,7 @@
     "list_networks": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
     "list_harvester_settings": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings",
     "get_api_ui_version": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/api-ui-version",
+    "get_backup_target": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings/backup-target",
     "create_user": "{{ harvester_endpoint }}/v1/harvesterhci.io.users",
     "create_vm_template": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
     "list_vm_templates": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/harvester-public/virtualmachinetemplates",
