Improve VLAN networking tests
1. For simplicity, let's use the 'default' namespace for all our tests
   unless the give tests is namespace-specific.
2. Code around https://github.com/harvester/harvester/issues/1059 for now by
   rebooting the VM for the public IP to be accessible.

--- a/harvester_e2e_tests/templates/api_endpoints.json.j2
+++ b/harvester_e2e_tests/templates/api_endpoints.json.j2
@@ -18,7 +18,6 @@
     "create_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages",
     "delete_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
     "get_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
-    "get_ter_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('harvester-public') }}/virtualmachineimages/%s",
     "update_image": "{{ harvester_endpoint }}/apis/{{ harvester_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineimages/%s",
     "create_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims",
     "update_volume": "{{ harvester_endpoint }}/api/v1/namespaces/{{ api_namespace | default('default') }}/persistentvolumeclaims/%s",
@@ -37,7 +36,7 @@
     "list_vm_instances": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances",
     "get_vm_instance": "{{ harvester_endpoint }}/apis/{{ kubevirt_api_version }}/namespaces/{{ api_namespace | default('default') }}/virtualmachineinstances/%s",
     "create_network": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
-    "get_network": "{{ harvester_endpoint }}/apis/k8s.cni.cncf.io/v1/namespaces/{{ api_namespace | default('harvester-public') }}/network-attachment-definitions/%s",
+    "get_network": "{{ harvester_endpoint }}/apis/k8s.cni.cncf.io/v1/namespaces/{{ api_namespace | default('default') }}/network-attachment-definitions/%s",
     "delete_network": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions/%s",
     "list_networks": "{{ harvester_endpoint }}/v1/k8s.cni.cncf.io.network-attachment-definitions",
     "list_harvester_settings": "{{ harvester_endpoint }}/v1/harvesterhci.io.settings",
