--- a/harvester_e2e_tests/templates/resource_network.tf.j2
+++ b/harvester_e2e_tests/templates/resource_network.tf.j2
@@ -1,6 +1,6 @@
 resource "harvester_network" "{{ name }}" {
   name      = "{{ name }}"
-  namespace = "{{ net_namespace | default('harvester-public') }}"
+  namespace = "{{ net_namespace | default('default') }}"
 
   vlan_id = {{ vlan_id }} 
 
